# FC_Agent_bible

./: README.md  pyproject.toml  requirements.txt
Part 1. AI 에이전트 기초 다지기/CH03.LLM 어플리케이션의 기본, RAG/: CH03.02.02.Langgraph로 구현하는 Basic RAG.ipynb
